--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -8,8 +8,45 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="text-center my-4">Bem vindo a nossa loja</h1>
-    <a class="btn btn-primary" href="/products">Produtos</a>
+    <h1 class="text-center my-4">Produtos</h1>
+
+    <a class="btn btn-primary" href="/produtos/insira">Insira os Produtos</a>
+
+    <table class="table">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>Nome</th>
+            <th>Marca</th>
+            <th>Categoria</th>
+            <th>Preço</th>
+            <th>Imagem</th>
+            <th>Criado em</th>
+            <th>...</th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr th:each="product : ${products}">
+                <td th:text="${product.id}"></td>
+                <td th:text="${product.name}"></td>
+                <td th:text="${product.brand}"></td>
+                <td th:text="${product.category}"></td>
+                <td th:text="$@{{product.price} + 'R$'}"></td>
+                <td>
+                    <img th:src="@{'/images/' + ${product.imageFileName}}"
+                         alt="..." width="100">
+                </td>
+                <td th:text="${product.createdAt.toString().substring(0, 10)}"></td>
+                <td style="white-space: nowrap">
+                    <a class="btn btn-primary btn-sm"
+                    th:href="@{/produtos/editar(id=${product.id})}">Editar</a>
+                <a  class="btn btn-danger btn-sm"
+                th:href="@{/produtos/deletar(id=${product.id})}"
+                onclick="return confirm('Você tem certeza disso?')">Excluir</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
